# taraference

./: .gitignore  AGENTS.md  Cargo.toml  GOAL.md  LOCAL_3050TI_MILESTONE.md  OLLAMA_LOCAL_COMPARISON.md  PREFILL_CORRECTNESS_TODO.md  README.md  VLLM_LLAMA_CPP_RESEARCH.md  WORKFLOW.md  llama4b_out.txt  llama4b_test.txt
benchmarks/: ollama-qwen25-05b.Modelfile  ollama-qwen25-3b.Modelfile  ollama_chat_bench.py
crates/cli/: Cargo.toml
crates/cli/src/: download.rs  main.rs  profile.rs  self_update.rs
crates/cli/src/serve/: mod.rs  openai.rs
crates/core/: Cargo.toml
crates/core/src/: backend.rs  chat.rs  config.rs  cuda_kernels.rs  cuda_model.rs  engine.rs  lib.rs  model.rs  quant.rs  sampler.rs  session.rs  tokenizer.rs
crates/core/src/cuda/: decode.rs  device.rs  forward.rs  kv.rs  layer.rs  load.rs  matmul.rs  mod.rs  model.rs  moe_pack.rs  types.rs
crates/core/src/cuda/kernels/: common.cu  deltanet.cu  embed.cu  gemm.cu  gemv.cu  mod.rs  ops.cu
crates/core/src/cuda/kernels/attn/: basic.cu  fast_v1.cu  fast_v2.cu  flash.cu  online.cu
crates/core/src/tokenizer/: bytes.rs  mod.rs  special.rs
docs/: AIRLLM_AND_MOE750.md  MOE_ROUTER_WEIGHT_COMPATIBILITY.md  TARA_750_ECOSYSTEM.md
openai-test-python/: README.md  assistant.py  requirements.txt
profile-logs/: Qwen3.5-4B_OPTIMIZATION_NIGHT.md  index.csv  latest_Qwen2.5-3B-Instruct-Q4_K_M.txt  latest_Qwen3.5-4B-Q4_K_M.txt  profile_2026-07-15_20-57-38_fast.txt  profile_2026-07-15_20-59-13_fast.txt  profile_2026-07-15_21-05-01_fastv2.txt  profile_2026-07-15_21-09-42_Qwen2.5-0.5B-Instruct-Q4_K_M_fastv2.txt  profile_2026-07-15_21-10-22_Qwen2.5-0.5B-Instruct-Q4_K_M_fastv2.txt  profile_2026-07-15_21-44-55_Qwen2.5-3B-Instruct-Q4_K_M_fastv2.txt  profile_2026-07-15_21-52-20_Qwen2.5-3B-Instruct-Q4_K_M_fastv2.txt  profile_2026-07-15_21-53-36_Qwen2.5-3B-Instruct-Q4_K_M_fastv2.txt  profile_2026-07-15_22-03-56_Qwen2.5-3B-Instruct-Q4_K_M_fastv2.txt  profile_2026-07-15_22-05-04_Qwen2.5-3B-Instruct-Q4_K_M_fastv2.txt  profile_2026-07-15_22-52-10_Qwen2.5-3B-Instruct-Q4_K_M_fastv2.txt  profile_2026-07-15_22-52-39_Qwen2.5-0.5B-Instruct-Q4_K_M_fastv2.txt  profile_2026-07-16_00-21-53_Qwen2.5-0.5B-Instruct-Q4_K_M_fastv2.txt  profile_2026-07-16_00-23-22_Qwen2.5-0.5B-Instruct-Q4_K_M_fastv2.txt  profile_2026-07-16_00-29-21_Qwen2.5-0.5B-Instruct-Q4_K_M_fastv2.txt  profile_2026-07-16_00-29-53_Qwen2.5-3B-Instruct-Q4_K_M_fastv2.txt  profile_2026-07-16_00-30-55_Qwen2.5-0.5B-Instruct-Q4_K_M_fastv2.txt  profile_2026-07-16_00-31-41_Qwen2.5-3B-Instruct-Q4_K_M_fastv2.txt  profile_2026-07-16_00-34-56_Qwen2.5-0.5B-Instruct-Q4_K_M_fastv2.txt  profile_2026-07-16_00-35-38_Qwen2.5-3B-Instruct-Q4_K_M_fastv2.txt  profile_2026-07-16_00-37-17_Qwen2.5-3B-Instruct-Q4_K_M_fastv2.txt  profile_2026-07-16_00-39-10_Qwen2.5-0.5B-Instruct-Q4_K_M_fastv2.txt  (+106 more)
review-by/: core_inference_engine_review.md
(+86 files in other folders)
