[workspace]
resolver = "2"
members = [
    "crates/gguf",
    "crates/core",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
byteorder = "1.5"
clap = { version = "4", features = ["derive"] }
memmap2 = "0.9"
rayon = "1.10"
thiserror = "2"
