[workspace]
resolver = "2"
members = [
    "crates/gguf",
    "crates/core",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["json"] }
byteorder = "1.5"
clap = { version = "4", features = ["derive"] }
memmap2 = "0.9"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = { version = "2", default-features = true }
uuid = { version = "1", features = ["v4"] }
