[package]
name = "taraference"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tarafer"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
taraference-core = { path = "../core" }
taraference-gguf = { path = "../gguf" }
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ureq.workspace = true
uuid.workspace = true
