[package]
name = "taraference-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
rayon.workspace = true
serde = { workspace = true }
taraference-gguf = { path = "../gguf" }
thiserror.workspace = true
cudarc = { version = "0.19", default-features = false, features = [
    "cuda-13020",
    "std",
    "driver",
    "nvrtc",
    "fallback-dynamic-loading",
] }
